--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <title>HTML Tutorial</title>
 <body>
 
-<p>This is the first paragraph.</p>
+<p>This is the first paragraph.</p> 
+<h1>This is a heading</h1>
+<p>This is a paragraph.</p
   
 
 </body>
