added <p> into html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <p>This is the first paragraph.</p> 
 <h1>This is a heading</h1>
 <p>This is a paragraph.</p
-  
+<p>This is a paragraph.</p>
+
 
 </body>
 </html>
